--- a/KhTracker/ProgressionDictionary.xaml
+++ b/KhTracker/ProgressionDictionary.xaml
@@ -335,24 +335,24 @@
     <local:GridLabelledImage x:Key="Old-GridDataAxel"          Source="Images\Progression\Old\twilight_town\axel.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridDataDemyx"        Source="Images\Progression\Old\hollow_bastion\demyx.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridLarxene"          Source="Images\Progression\Old\space_paranoids\larxene.png"          GridAllowed="True"                             x:Shared="False"/>
-    <local:GridLabelledImage x:Key="Old-GridLarxeneData"      Source="Images\Progression\Old\space_paranoids\larxene.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Old-GridLarxeneData"      Source="Images\Progression\Old\space_paranoids\larxene_data.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridLexaeus"      Source="Images\Progression\Old\agrabah\lexaeus.png"           GridAllowed="True"                             x:Shared="False"/>
-    <local:GridLabelledImage x:Key="Old-GridLexaeusData"  Source="Images\Progression\Old\agrabah\lexaeus.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Old-GridLexaeusData"  Source="Images\Progression\Old\agrabah\lexaeus_data.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridLingeringWill"            Source="Images\Progression\Old\disney_castle\lingering_will.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridDataLuxord"   Source="Images\Progression\Old\port_royal\luxord.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridMarluxia"                 Source="Images\Progression\Old\disney_castle\marluxia.png"            GridAllowed="True"                             x:Shared="False"/>
-    <local:GridLabelledImage x:Key="Old-GridMarluxiaData"             Source="Images\Progression\Old\disney_castle\marluxia.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Old-GridMarluxiaData"             Source="Images\Progression\Old\disney_castle\marluxia_data.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridDataRoxas"        Source="Images\Progression\Old\simulated_twilight_town\roxas.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridDataSaix"     Source="Images\Progression\Old\pride_lands\saix.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridSephiroth"        Source="Images\Progression\Old\hollow_bastion\sephiroth.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridDataXaldin"   Source="Images\Progression\Old\beast's_castle\xaldin.png"           GridAllowed="True"                             x:Shared="False"/>
-    <local:GridLabelledImage x:Key="Old-GridDataXemnas"       Source="Images\Progression\Old\the_world_that_never_was\xemnas.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Old-GridDataXemnas"       Source="Images\Progression\Old\the_world_that_never_was\xemnas_data.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridDataFinalXemnas"       Source="Images\Progression\Old\the_world_that_never_was\data_final_xemnas.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridDataXigbar"   Source="Images\Progression\Old\land_of_dragons\xigbar.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridVexen"            Source="Images\Progression\Old\halloween_town\vexen.png"          GridAllowed="True"                             x:Shared="False"/>
-    <local:GridLabelledImage x:Key="Old-GridVexenData"        Source="Images\Progression\Old\halloween_town\vexen.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Old-GridVexenData"        Source="Images\Progression\Old\halloween_town\vexen_data.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridZexion"       Source="Images\Progression\Old\olympus_coliseum\zexion.png"         GridAllowed="True"                             x:Shared="False"/>
-    <local:GridLabelledImage x:Key="Old-GridZexionData"   Source="Images\Progression\Old\olympus_coliseum\zexion.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Old-GridZexionData"   Source="Images\Progression\Old\olympus_coliseum\zexion_data.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridArmoredXemnas1"   Source="Images\Progression\Old\the_world_that_never_was\ArmoredXemnas1.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridArmoredXemnas2"   Source="Images\Progression\Old\the_world_that_never_was\ArmoredXemnas2.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-GridCloud"   Source="Images\Progression\Old\olympus_coliseum\cloud.png"           GridAllowed="True"                             x:Shared="False"/>
