--- a/KhTracker/Windows/GridOptionsWindow.xaml
+++ b/KhTracker/Windows/GridOptionsWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:KhTracker"
-        SizeToContent="WidthAndHeight" MinWidth="400" MinHeight="500"
+        SizeToContent="WidthAndHeight" MinWidth="375" MinHeight="300"
         ResizeMode="CanResize"
         Title="Grid Tracker Options" 
         WindowStartupLocation="CenterScreen"
@@ -23,18 +23,20 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
                         <Border Background="{TemplateBinding Background}" CornerRadius="5">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
-
-
+        
         <Style TargetType="{x:Type CheckBox}">
             <Setter Property="Foreground" Value="#444"/>
             <Setter Property="Background" Value="Transparent"/>
+            <!-- Increase Padding for more space inside each CheckBox -->
             <Setter Property="Padding" Value="10"/>
+            <!-- Adjust Margin for more space between CheckBoxes -->
+            <Setter Property="Margin" Value="10"/>
             <Setter Property="FontSize" Value="12"/>
         </Style>
 
@@ -42,7 +44,16 @@
             <Setter Property="Foreground" Value="#444"/>
             <Setter Property="Background" Value="#F4F4F4"/>
             <Setter Property="Padding" Value="10"/>
-            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+        </Style>
+
+        <Style x:Key="SubCategoryExpanderStyle" TargetType="{x:Type Expander}">
+            <Setter Property="Foreground" Value="#444"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontWeight" Value="Regular"/>
         </Style>
 
         <Style TargetType="TextBlock">
@@ -50,18 +61,21 @@
             <Setter Property="FontSize" Value="14"/>
         </Style>
 
-        <!-- Template Selector -->
+        <local:OptionVisibilityConverter x:Key="OptionVisibilityConverter"/>
+
         <local:OptionTemplateSelector x:Key="OptionSelector">
             <local:OptionTemplateSelector.CheckBoxTemplate>
                 <DataTemplate>
-                    <CheckBox Content="{Binding Description}" IsChecked="{Binding DefaultValue}" />
+                    <CheckBox Content="{Binding Description}" 
+                      IsChecked="{Binding DefaultValue}" 
+                      Visibility="{Binding Converter={StaticResource OptionVisibilityConverter}}"/>
                 </DataTemplate>
             </local:OptionTemplateSelector.CheckBoxTemplate>
 
             <local:OptionTemplateSelector.TextBoxTemplate>
                 <DataTemplate>
                     <StackPanel HorizontalAlignment="Center">
-                        <Label Content="{Binding Description}" />
+                        <Label Content="{Binding Description}"/>
                         <TextBox Text="{Binding DefaultValue}" Width="200" Margin="10"/>
                     </StackPanel>
                 </DataTemplate>
@@ -78,7 +92,7 @@
                             <ItemsControl ItemsSource="{Binding SubCategories}" Margin="5">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <Expander Header="{Binding SubCategoryName}" Padding="2.5" Margin="0,5,0,5" Foreground="DarkSlateGray">
+                                        <Expander Header="{Binding SubCategoryName}" Style="{StaticResource SubCategoryExpanderStyle}" Padding="2.5" Margin="0,5,0,5" Foreground="DarkSlateGray">
                                             <ItemsControl ItemsSource="{Binding Options}" ItemTemplateSelector="{StaticResource OptionSelector}" Margin="5">
                                                 <ItemsControl.ItemsPanel>
                                                     <ItemsPanelTemplate>
