--- a/KhTracker/Windows/GridOptionsWindow.xaml
+++ b/KhTracker/Windows/GridOptionsWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:KhTracker"
         SizeToContent="WidthAndHeight" MinWidth="375" MinHeight="300"
-        ResizeMode="CanResize"
+        ResizeMode="CanMinimize"
         Title="Grid Tracker Options" 
         WindowStartupLocation="CenterScreen"
         LocationChanged="Window_LocationChanged"
