--- a/KhTracker/Windows/GridOptionsWindow.xaml
+++ b/KhTracker/Windows/GridOptionsWindow.xaml
@@ -29,15 +29,34 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        
+
         <Style TargetType="{x:Type CheckBox}">
-            <Setter Property="Foreground" Value="#444"/>
+            <Setter Property="Foreground" Value="#5D4037"/>
             <Setter Property="Background" Value="Transparent"/>
-            <!-- Increase Padding for more space inside each CheckBox -->
-            <Setter Property="Padding" Value="10"/>
-            <!-- Adjust Margin for more space between CheckBoxes -->
-            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Padding" Value="4,2,4,2"/>
+            <Setter Property="Margin" Value="8"/>
             <Setter Property="FontSize" Value="12"/>
+            <Setter Property="FontFamily" Value="ggsans"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+
+            <Style.Triggers>
+                <!-- Hover effect -->
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Background" Value="#DEE600"/>
+                    <!-- Gold color that reflects the game's accent color -->
+                    <Setter Property="Foreground" Value="#86BDFB"/>
+                    <!-- Text color change to ensure contrast -->
+                </Trigger>
+                <!-- Checked state effect -->
+                <Trigger Property="IsChecked" Value="true">
+                    <Setter Property="Background" Value="#DEE600"/>
+                    <!-- A brighter gold for the checked state -->
+                </Trigger>
+            </Style.Triggers>
+            
         </Style>
 
         <Style TargetType="{x:Type Expander}">
@@ -45,7 +64,7 @@
             <Setter Property="Background" Value="#F4F4F4"/>
             <Setter Property="Padding" Value="10"/>
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontWeight" Value="Bold"/>
         </Style>
 
         <Style x:Key="SubCategoryExpanderStyle" TargetType="{x:Type Expander}">
@@ -53,7 +72,7 @@
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="Padding" Value="5"/>
             <Setter Property="FontSize" Value="14"/>
-            <Setter Property="FontWeight" Value="Regular"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
         </Style>
 
         <Style TargetType="TextBlock">
@@ -93,7 +112,7 @@
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <Expander Header="{Binding SubCategoryName}" Style="{StaticResource SubCategoryExpanderStyle}" Padding="2.5" Margin="0,5,0,5" Foreground="DarkSlateGray">
-                                            <ItemsControl ItemsSource="{Binding Options}" ItemTemplateSelector="{StaticResource OptionSelector}" Margin="5">
+                                            <ItemsControl ItemsSource="{Binding Options}" ItemTemplateSelector="{StaticResource OptionSelector}">
                                                 <ItemsControl.ItemsPanel>
                                                     <ItemsPanelTemplate>
                                                         <UniformGrid Columns="4"/>
