--- a/KhTracker/Windows/GridOptionsWindow.xaml
+++ b/KhTracker/Windows/GridOptionsWindow.xaml
@@ -33,12 +33,11 @@
         <Style TargetType="{x:Type CheckBox}">
             <Setter Property="Foreground" Value="#5D4037"/>
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Padding" Value="4,2,4,2"/>
-            <Setter Property="Margin" Value="8"/>
-            <Setter Property="FontSize" Value="12"/>
-            <Setter Property="FontFamily" Value="ggsans"/>
+            <Setter Property="Margin" Value="12"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontFamily" Value="Roboto"/>
             <Setter Property="Cursor" Value="Hand"/>
-            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
 
